--- a/css/pgc-admin.css
+++ b/css/pgc-admin.css
@@ -60,3 +60,53 @@ input.warning:hover, a.warning:hover {
   display: inline;
 }
 
+#progressborder {
+  display: none;
+  float:left;
+  margin-top: -6px;
+  padding:0;
+  border:1px solid #06d;
+  width: 300px;
+}
+
+#progressbar {
+  float: left;
+  margin-top: -1px;
+  padding-right:5px;
+  height:16px;
+  width:0;
+  background-color:#03a;
+  border-right:1px solid #03a;
+  overflow:hidden;
+  text-align:right; color:#fff;
+}
+
+#statusbar {
+  clear: both;
+  float: left;
+  display: none;
+  margin-bottom: 10px;
+}
+
+#scanresults {
+  display:none;
+  margin-bottom: 5px;
+}
+
+.pgc_even {
+  background-color: #fff;
+}
+
+.pgc_odd {
+  background-color: #eee;
+}
+
+.ajax_processing {
+  visibility: hidden;
+}
+
+.pgc_lm30 {
+  float: left;
+  margin-left: 30px;
+  margin-right:30px;
+}
