--- a/css/pgc-admin.css
+++ b/css/pgc-admin.css
@@ -73,7 +73,7 @@ input.warning:hover, a.warning:hover {
   float: left;
   margin-top: -1px;
   padding-right:5px;
-  height:16px;
+  height:22px;
   width:0;
   background-color:#03a;
   border-right:1px solid #03a;
@@ -103,6 +103,7 @@ input.warning:hover, a.warning:hover {
 
 .ajax_processing {
   visibility: hidden;
+  padding: 0 0 0 10px;
 }
 
 .pgc_lm30 {
